fixed misalignment of header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -146,6 +146,7 @@ header{
         background-color: var(--bg75prctg);
         backdrop-filter: blur(8px);
         top: 100%;
+        left: -1px;
         margin-top: 0;
         width: 100%;
         height: auto;
